--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">TaskToDo</string>
-    <string name="maydon_tuldiring">Kerakkli maydonni to`ldiring!</string>
+    <string name="maydon_tuldiring">Fill out fields!</string>
     <string name="cannot_email">You have no application to contact us via email</string>
 </resources>
